Add listBeansQuery, upgrade createRecipeCommand
